add button and style for code

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       <a id="saveBtn" href="#/edit">edit</a>
       <a id="saveBtn" href="#/view">view</a>
     </div>
+    <script src="./js/vendor.js"></script>
     <script src="./js/edit.js"></script>
   </body>
 </html>
