--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         </div>
         <a id="addBtn" href="#">ADD</a>
       </div>
+      <div id="listContainer"></div>
     </div>
     <script src="./js/vendor.js"></script>
     <script src="./js/edit.js"></script>
