--- a/public/app.html
+++ b/public/app.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <div id="container" class="content">
+      <div id="viewContainer"></div>
+      <div id="listContainer"></div>
     </div>
     <script src="./js/bundle.js"></script>
   </body>
