add build command

--- a/public/app.html
+++ b/public/app.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="https://cdn-static-1.medium.com/_/fp/css/fonts-base.LqXl5T9RMAR39Ge23ku50w.css">
     <link rel="stylesheet" href="./css/vendor.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <div id="container" class="content">
