--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <div id="banner"></div>
     <div id="container">
       <div id="editContainer">
         <div class="editable" contenteditable="true">
