--- a/public/app.html
+++ b/public/app.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <div id="banner"></div>
     <div id="container" class="content">
       <div id="viewContainer"></div>
       <div id="listContainer"></div>
