--- a/public/app.html
+++ b/public/app.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div id="banner"></div>
     <div id="container" class="content">
+      <div id="menu" class="clearfix"></div>
       <div id="viewContainer"></div>
       <div id="listContainer"></div>
     </div>
